{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 201,
  "lineage": "a2e4ac4c-b4a5-b844-3abc-21d038707e1e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349845578360:vpc/vpc-6b26bd13",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7623121c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-770a9a0f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-6b26bd13",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d9c682a2",
            "owner_id": "349845578360"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2977df9fd651c5e",
            "arn": "arn:aws:ec2:us-west-2:349845578360:instance/i-0eee766f2f8f89548",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0c509529f9b290fd5",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20250120015355533200000002",
            "id": "i-0eee766f2f8f89548",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "nomad-aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ef0578b66de7ee0",
            "private_dns": "ip-172-31-5-239.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.239",
            "public_dns": "ec2-54-201-158-205.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.158.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071459d1df66b2dfc",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-clients-ingress",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5a9a5c07",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-0",
              "NomadType": "client"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-0",
              "NomadType": "client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c97623caf9bae1",
              "sg-03a3408826780c67b",
              "sg-041e8e62a947da85a",
              "sg-08fa8f3db5a0ee91e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.server",
            "aws_key_pair.nomad",
            "aws_security_group.allow_all_internal",
            "aws_security_group.clients_ingress",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default",
            "random_uuid.nomad_id",
            "random_uuid.nomad_token",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2977df9fd651c5e",
            "arn": "arn:aws:ec2:us-west-2:349845578360:instance/i-04419b755caff5623",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-02c74b147c22a59fc",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20250120015355533200000002",
            "id": "i-04419b755caff5623",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "nomad-aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0582bedecac87c723",
            "private_dns": "ip-172-31-43-31.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.31",
            "public_dns": "ec2-54-184-0-7.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.0.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03017f9e1f3262fb8",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-clients-ingress",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e13425aa",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-1",
              "NomadType": "client"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-1",
              "NomadType": "client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c97623caf9bae1",
              "sg-03a3408826780c67b",
              "sg-041e8e62a947da85a",
              "sg-08fa8f3db5a0ee91e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.server",
            "aws_key_pair.nomad",
            "aws_security_group.allow_all_internal",
            "aws_security_group.clients_ingress",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default",
            "random_uuid.nomad_id",
            "random_uuid.nomad_token",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2977df9fd651c5e",
            "arn": "arn:aws:ec2:us-west-2:349845578360:instance/i-0cbff1df63a7ace0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdba",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-0dc69a8c685fa5a40",
                "volume_size": 40,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-00bcf8cbecd349075",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20250120015355533200000002",
            "id": "i-0cbff1df63a7ace0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "nomad-aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058edc5eafa3ce56b",
            "private_dns": "ip-172-31-44-103.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.103",
            "public_dns": "ec2-44-245-204-49.us-west-2.compute.amazonaws.com",
            "public_ip": "44.245.204.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0100ddb9ccb3c52ef",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-clients-ingress",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e13425aa",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-2",
              "NomadType": "client"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-client-2",
              "NomadType": "client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c97623caf9bae1",
              "sg-03a3408826780c67b",
              "sg-041e8e62a947da85a",
              "sg-08fa8f3db5a0ee91e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.server",
            "aws_key_pair.nomad",
            "aws_security_group.allow_all_internal",
            "aws_security_group.clients_ingress",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default",
            "random_uuid.nomad_id",
            "random_uuid.nomad_token",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2977df9fd651c5e",
            "arn": "arn:aws:ec2:us-west-2:349845578360:instance/i-0ff8f6647f2108d8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20250120015355533200000002",
            "id": "i-0ff8f6647f2108d8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nomad-aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abf04603f195bcaa",
            "private_dns": "ip-172-31-44-221.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.221",
            "public_dns": "ec2-52-38-178-52.us-west-2.compute.amazonaws.com",
            "public_ip": "52.38.178.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abe43d9ae30c21e6",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e13425aa",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-0",
              "NomadType": "server"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-0",
              "NomadType": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c97623caf9bae1",
              "sg-03a3408826780c67b",
              "sg-041e8e62a947da85a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_key_pair.nomad",
            "aws_security_group.allow_all_internal",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default",
            "random_uuid.nomad_id",
            "random_uuid.nomad_token",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2977df9fd651c5e",
            "arn": "arn:aws:ec2:us-west-2:349845578360:instance/i-061faae74af129b21",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20250120015355533200000002",
            "id": "i-061faae74af129b21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nomad-aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a90bb1e0c934f52f",
            "private_dns": "ip-172-31-36-220.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.220",
            "public_dns": "ec2-44-248-69-194.us-west-2.compute.amazonaws.com",
            "public_ip": "44.248.69.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6d3ae5376f82f69",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e13425aa",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-1",
              "NomadType": "server"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-1",
              "NomadType": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c97623caf9bae1",
              "sg-03a3408826780c67b",
              "sg-041e8e62a947da85a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_key_pair.nomad",
            "aws_security_group.allow_all_internal",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default",
            "random_uuid.nomad_id",
            "random_uuid.nomad_token",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2977df9fd651c5e",
            "arn": "arn:aws:ec2:us-west-2:349845578360:instance/i-069099562de5b1c1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nomad20250120015355533200000002",
            "id": "i-069099562de5b1c1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nomad-aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e3f52c95e1bc5ca",
            "private_dns": "ip-172-31-33-113.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.113",
            "public_dns": "ec2-34-220-202-126.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.202.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f513b1d93af14ce",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nomad-allow-all-internal",
              "nomad-ssh-ingress",
              "nomad-ui-ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e13425aa",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-2",
              "NomadType": "server"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "nomad-server-2",
              "NomadType": "server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c97623caf9bae1",
              "sg-03a3408826780c67b",
              "sg-041e8e62a947da85a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_key_pair.nomad",
            "aws_security_group.allow_all_internal",
            "aws_security_group.consul_nomad_ui_ingress",
            "aws_security_group.ssh_ingress",
            "data.aws_iam_policy_document.instance_role",
            "data.aws_vpc.default",
            "random_uuid.nomad_id",
            "random_uuid.nomad_token",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349845578360:security-group/sg-03a3408826780c67b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a3408826780c67b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-allow-all-internal",
            "name_prefix": "",
            "owner_id": "349845578360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-6b26bd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clients_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349845578360:security-group/sg-08fa8f3db5a0ee91e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fa8f3db5a0ee91e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-clients-ingress",
            "name_prefix": "",
            "owner_id": "349845578360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-6b26bd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul_nomad_ui_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349845578360:security-group/sg-041e8e62a947da85a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041e8e62a947da85a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-ui-ingress",
            "name_prefix": "",
            "owner_id": "349845578360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-6b26bd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349845578360:security-group/sg-0357fb5ee2ff898e1",
            "description": "Allow NFS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0357fb5ee2ff898e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_nfs",
            "name_prefix": "",
            "owner_id": "349845578360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-6b26bd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:349845578360:security-group/sg-013c97623caf9bae1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c97623caf9bae1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nomad-ssh-ingress",
            "name_prefix": "",
            "owner_id": "349845578360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-6b26bd13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}